[gd_scene load_steps=6 format=3 uid="uid://brq7rxqt3gers"]

[ext_resource type="Script" path="res://Player.gd" id="1_jmafn"]
[ext_resource type="Script" path="res://player/Camera2D.gd" id="2_o677x"]
[ext_resource type="Script" path="res://enemyChecker.gd" id="3_cvbhf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uuull"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pktpp"]
radius = 20.0

[node name="Player" type="Area2D" groups=["entities", "player"]]
process_mode = 1
z_index = 3
position = Vector2(266, 311)
script = ExtResource("1_jmafn")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 3.0
offset_top = -50.0
offset_right = 4.0
offset_bottom = -27.0
grow_horizontal = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = -39.0
offset_right = 38.0
offset_bottom = -12.0
grow_horizontal = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uuull")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
script = ExtResource("2_o677x")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="enemyChecker" type="Area2D" parent="."]
script = ExtResource("3_cvbhf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyChecker"]
position = Vector2(18, 0)
shape = SubResource("CircleShape2D_pktpp")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
